<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_login_form_border"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginInput"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/login_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="16dp"
                tools:text="user@email.com"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_500"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="48dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="16dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ru.example.sed.auth.view.SubmitButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:layout_marginTop="16dp"
        app:enabled="false"
        app:text="Войти"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_below="@id/form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/resetPassword"
        style="@style/DefaultTextButtonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:padding="16dp"
        android:text="@string/reset_password"
        />

    <TextView
        android:id="@+id/changeServer"
        style="@style/DefaultTextButtonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassword"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/change_server"
        />
</RelativeLayout>